--- a/.github/workflows/build+release.yml
+++ b/.github/workflows/build+release.yml
@@ -206,7 +206,21 @@ jobs:
             fi
           fi
           
+          # override prerelease flag if version has a suffix (anything but rc# treated as alpha or beta)
+          prerelease="${{ steps.inputs.outputs.prerelease }}"
+          if [[ -z "${{ inputs.isPrerelease }}" ]] ; then
+            versionsuffix=$(echo $version | sed -r 's/[0-9\.]+(.*)/\1/')
+            if [[ "$versionsuffix" =~ ^rc[0-9]+$ ]] ; then
+              echo "- Setting prerelease flag to false due to version ending in \"$versionsuffix\""
+              prerelease=false
+            elif [[ -n "$versionsuffix" ]] ; then
+              echo "- Setting prerelease flag to true due to version ending in \"$versionsuffix\""
+              prerelease=true
+            fi
+          fi
+          
           echo "version=$version" >> $GITHUB_OUTPUT
+          echo "prerelease=$prerelease" >> $GITHUB_OUTPUT
           echo "bundleid=$bundleid" >> $GITHUB_OUTPUT
           echo "releasename=$releasename" >> $GITHUB_OUTPUT
           echo "archivename=$releasenameNoSpaces" >> $GITHUB_OUTPUT
@@ -621,7 +635,7 @@ jobs:
       
       - name: Generate Sparkle Appcast File
         id: sparkle
-        if: ${{ success() && steps.inputs.outputs.githubRelease == 'true' && steps.version.outputs.updateAppcast == 'true' && steps.inputs.outputs.prerelease != 'true' && steps.version.outputs.tag }}
+        if: ${{ success() && steps.inputs.outputs.githubRelease == 'true' && steps.version.outputs.updateAppcast == 'true' && steps.version.outputs.prerelease != 'true' && steps.version.outputs.tag }}
         run: |
           # Generate Sparkle Appcast File step bash script
           
@@ -661,7 +675,7 @@ jobs:
           echo "- Copy in current appcast.xml"
           cp ./appcast.xml "$sparkleStuffDir/appcast.xml"
           
-          if [[ ${{ steps.inputs.outputs.prerelease }} == 'true' ]]; then
+          if [[ ${{ steps.version.outputs.prerelease }} == 'true' ]]; then
             echo "- Adding beta channel parameter"
             channelarg="--channel beta"
           else
@@ -671,7 +685,7 @@ jobs:
           echo "- Update appcast.xml"
           if ! echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | generate_appcast --ed-key-file - \
             --link "$releasesURL" --download-url-prefix "$downloadURLPrefix" $channelarg \
-            --embed-release-notes -o ./appcast.xml "$sparkleStuffDir"
+            --maximum-versions 0 --embed-release-notes -o ./appcast.xml "$sparkleStuffDir"
           then
             echo "::warning::generate_appcast failed, no new appcast.xml file generated"
             echo
@@ -708,7 +722,7 @@ jobs:
           name: ${{ steps.version.outputs.releasename }}
           tag_name: ${{ steps.version.outputs.tag }}
           draft: true
-          prerelease: ${{ steps.inputs.outputs.prerelease }}
+          prerelease: ${{ steps.version.outputs.prerelease }}
           body_path: ${{ steps.notes.outputs.file }}
           files: |
             ${{ steps.zip.outputs.file }}
