feat improve intents, now somewhat tested too

--- a/Source/App/Info-MAS.plist
+++ b/Source/App/Info-MAS.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -35,15 +33,19 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>INIntentsSupported</key>
 	<array>
-		<string>Clearintent</string>
-		<string>SelectIntent</string>
-		<string>GetIntent</string>
-		<string>DeleteIntent</string>
-		<string>StartIntent</string>
+		<string>StartCopyingIntent</string>
+		<string>StartPastingIntent</string>
 		<string>CancelIntent</string>
 		<string>BatchCopyIntent</string>
 		<string>BatchPasteIntent</string>
+		<string>AdvanceIntent</string>
+		<string>ClearIntent</string>
+		<string>RepeatBatchIntent</string>
+		<string>SelectNamedBatchIntent</string>
+		<string>PasteSequentiallyIntent</string>
 	</array>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.productivity</string>
 	<key>LSMinimumSystemVersion</key>
@@ -58,14 +60,16 @@
 	<string>NSApplication</string>
 	<key>NSUserActivityTypes</key>
 	<array>
+		<string>AdvanceIntent</string>
 		<string>BatchCopyIntent</string>
 		<string>BatchPasteIntent</string>
 		<string>CancelIntent</string>
 		<string>ClearIntent</string>
-		<string>DeleteIntent</string>
-		<string>GetIntent</string>
-		<string>SelectIntent</string>
-		<string>StartIntent</string>
+		<string>PasteSequentiallyIntent</string>
+		<string>RepeatBatchIntent</string>
+		<string>SelectNamedBatchIntent</string>
+		<string>StartCopyingIntent</string>
+		<string>StartPastingIntent</string>
 	</array>
 </dict>
 </plist>
